# Pixel-Pour

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
pixel_pour/: main.py
pixel_pour/simulation/: sand_simulation.py
pixel_pour/ui/: renderer.py
pixel_pour/utils/: config.py
scripts/: run_tools.py
tests/: test_sand_simulation.py
